[gd_scene load_steps=6 format=2]

[ext_resource path="res://SCENES/Paddle_Right.tscn" type="PackedScene" id=1]
[ext_resource path="res://SCENES/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://SCENES/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://SCENES/Paddle_Left.tscn" type="PackedScene" id=4]
[ext_resource path="res://SCRIPTS/Main_Game.gd" type="Script" id=5]

[node name="Main_Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 16, 0 )

[node name="Paddle_Left" parent="." instance=ExtResource( 4 )]

[node name="Paddle_Right" parent="." instance=ExtResource( 1 )]

[node name="UI" parent="." instance=ExtResource( 2 )]

[connection signal="respawn_ball" from="UI" to="." method="_on_UI_respawn_ball"]
[connection signal="restart_game" from="UI" to="." method="_on_UI_restart_game"]
[connection signal="score" from="UI" to="Ball" method="_on_UI_score"]
